--- a/Develop/package.json
+++ b/Develop/package.json
@@ -1,28 +1,209 @@
 {
-  "name": "module-13-challenge-orm",
+  "name": "e-commerce-back-end-orm",
   "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
-    "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git@work.github.com:coding-boot-camp/module-13-challenge-orm.git"
+    "url": "git+https://github.com/smith-utxo/E-Commerce-Back-End-ORM.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.3"
+  "bugs": {
+    "url": "https://github.com/smith-utxo/E-Commerce-Back-End-ORM/issues"
   },
+  "homepage": "https://github.com/smith-utxo/E-Commerce-Back-End-ORM#readme",
   "dependencies": {
+    "abbrev": "^1.1.1",
+    "accepts": "^1.3.8",
+    "ansi-align": "^3.0.0",
+    "ansi-regex": "^5.0.0",
+    "ansicolors": "^0.3.2",
+    "any-promise": "^1.3.0",
+    "anymatch": "^3.1.1",
+    "array-flatten": "^1.1.1",
+    "balanced-match": "^1.0.0",
+    "binary-extensions": "^2.0.0",
+    "bluebird": "^3.7.2",
+    "body-parser": "^1.20.0",
+    "boxen": "^4.2.0",
+    "brace-expansion": "^1.1.11",
+    "braces": "^3.0.2",
+    "cacheable-request": "^6.1.0",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.2",
+    "camelcase": "^5.3.1",
+    "cardinal": "^2.1.1",
+    "chokidar": "^3.4.0",
+    "ci-info": "^2.0.0",
+    "cli-boxes": "^2.2.0",
+    "clone-response": "^1.0.2",
+    "cls-bluebird": "^2.1.0",
+    "concat-map": "^0.0.1",
+    "configstore": "^5.0.1",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.4",
+    "cookie": "^0.5.0",
+    "cookie-signature": "^1.0.6",
+    "crypto-random-string": "^2.0.0",
+    "debug": "^4.1.1",
+    "decompress-response": "^3.3.0",
+    "deep-extend": "^0.6.0",
+    "defer-to-connect": "^1.1.3",
+    "denque": "^1.4.1",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "dot-prop": "^5.2.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "dottie": "^2.0.2",
+    "duplexer3": "^0.1.4",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^7.0.3",
+    "encodeurl": "^1.0.2",
+    "end-of-stream": "^1.4.4",
+    "escape-goat": "^2.1.1",
+    "escape-html": "^1.0.3",
+    "esprima": "^4.0.1",
+    "etag": "^1.8.1",
+    "express": "^4.18.1",
+    "fill-range": "^7.0.1",
+    "finalhandler": "^1.2.0",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "function-bind": "^1.1.1",
+    "generate-function": "^2.3.1",
+    "get-intrinsic": "^1.1.2",
+    "get-stream": "^4.1.0",
+    "glob-parent": "^5.1.2",
+    "global-dirs": "^2.0.1",
+    "got": "^9.6.0",
+    "graceful-fs": "^4.2.4",
+    "has": "^1.0.3",
+    "has-flag": "^3.0.0",
+    "has-symbols": "^1.0.3",
+    "has-yarn": "^2.1.0",
+    "http-cache-semantics": "^4.1.0",
+    "http-errors": "^2.0.0",
+    "iconv-lite": "^0.4.24",
+    "ignore-by-default": "^1.0.1",
+    "import-lazy": "^2.1.0",
+    "imurmurhash": "^0.1.4",
+    "inflection": "^1.12.0",
+    "inherits": "^2.0.4",
+    "ini": "^1.3.8",
+    "ipaddr.js": "^1.9.1",
+    "is-binary-path": "^2.1.0",
+    "is-bluebird": "^1.0.2",
+    "is-ci": "^2.0.0",
+    "is-extglob": "^2.1.1",
+    "is-fullwidth-code-point": "^3.0.0",
+    "is-glob": "^4.0.1",
+    "is-installed-globally": "^0.3.2",
+    "is-npm": "^4.0.0",
+    "is-number": "^7.0.0",
+    "is-obj": "^2.0.0",
+    "is-path-inside": "^3.0.2",
+    "is-property": "^1.0.2",
+    "is-typedarray": "^1.0.0",
+    "is-yarn-global": "^0.3.0",
+    "json-buffer": "^3.0.0",
+    "keyv": "^3.1.0",
+    "latest-version": "^5.1.0",
+    "lodash": "^4.17.21",
+    "long": "^4.0.0",
+    "lowercase-keys": "^1.0.1",
+    "lru-cache": "^5.1.1",
+    "make-dir": "^3.1.0",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "mimic-response": "^1.0.1",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.5",
+    "moment": "^2.25.3",
+    "moment-timezone": "^0.5.28",
+    "ms": "^2.1.2",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
-  }
+    "named-placeholders": "^1.1.2",
+    "negotiator": "^0.6.3",
+    "nodemon": "^2.0.3",
+    "nopt": "^1.0.10",
+    "normalize-path": "^3.0.0",
+    "normalize-url": "^4.5.1",
+    "object-inspect": "^1.12.2",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "p-cancelable": "^1.1.0",
+    "package-json": "^6.5.0",
+    "parseurl": "^1.3.3",
+    "path-to-regexp": "^0.1.7",
+    "picomatch": "^2.2.2",
+    "prepend-http": "^2.0.0",
+    "proxy-addr": "^2.0.7",
+    "pseudomap": "^1.0.2",
+    "pstree.remy": "^1.1.7",
+    "pump": "^3.0.0",
+    "pupa": "^2.0.1",
+    "qs": "^6.10.3",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.1",
+    "readdirp": "^3.4.0",
+    "rc": "^1.2.8",
+    "redeyed": "^2.1.1",
+    "registry-auth-token": "^4.1.1",
+    "registry-url": "^5.1.0",
+    "responselike": "^1.0.2",
+    "retry-as-promised": "^3.2.0",
+    "safe-buffer": "^5.2.1",
+    "safer-buffer": "^2.1.2",
+    "semver": "^6.3.0",
+    "semver-diff": "^3.1.1",
+    "send": "^0.18.0",
+    "seq-queue": "^0.0.5",
+    "sequelize": "^5.21.7",
+    "sequelize-pool": "^2.3.0",
+    "serve-static": "^1.15.0",
+    "setprototypeof": "^1.2.0",
+    "shimmer": "^1.2.1",
+    "side-channel": "^1.0.4",
+    "signal-exit": "^3.0.3",
+    "sqlstring": "^2.3.2",
+    "statuses": "^2.0.1",
+    "string-width": "^4.2.0",
+    "strip-ansi": "^5.2.0",
+    "supports-color": "^5.5.0",
+    "term-size": "^2.2.0",
+    "to-readable-stream": "^1.0.0",
+    "to-regex-range": "^5.0.1",
+    "toidentifier": "^1.0.1",
+    "toposort-class": "^1.0.1",
+    "touch": "^3.1.0",
+    "type-fest": "^0.8.1",
+    "type-is": "^1.6.18",
+    "typedarray-to-buffer": "^3.1.5",
+    "undefsafe": "^2.0.3",
+    "unique-string": "^2.0.0",
+    "unpipe": "^1.0.0",
+    "update-notifier": "^4.1.0",
+    "url-parse-lax": "^3.0.0",
+    "utils-merge": "^1.0.1",
+    "uuid": "^3.4.0",
+    "validator": "^10.11.0",
+    "vary": "^1.1.2",
+    "widest-line": "^3.1.0",
+    "wkx": "^0.4.8",
+    "wrappy": "^1.0.2",
+    "write-file-atomic": "^3.0.3",
+    "xdg-basedir": "^4.0.0",
+    "yallist": "^3.1.1"
+  },
+  "devDependencies": {},
+  "description": ""
 }
